--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
+# ===================================
 # Dependencies
+# ===================================
 node_modules/
 */node_modules/
+**/node_modules/
 
-# Production builds
+# ===================================
+# Production Builds
+# ===================================
 .next/
 dist/
 build/
 out/
+*.dll
+*.pdb
+*.exe
+!**/packages/build/
 
-# Environment variables
+# ===================================
+# Environment Variables & Secrets
+# ===================================
 .env*
 !.env.example
 .env
@@ -18,111 +29,155 @@ out/
 .env.production.local
 .env.production
 
-# IDE
+# SSH Keys & Certificates
+*.pem
+*.key
+*.p12
+*.pfx
+*.cer
+*.crt
+*.der
+
+# AWS Credentials
+.aws/
+aws-credentials.json
+credentials.json
+
+# ===================================
+# IDE & Editors
+# ===================================
 .vscode/
+!.vscode/extensions.json
+!.vscode/settings.json
 .idea/
 *.swp
 *.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.sublime-project
 
-# OS
+# ===================================
+# Operating System
+# ===================================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
+# ===================================
 # Logs
+# ===================================
 *.log
 logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Secrets
-*.pem
-*.key
-
-# Runtime data
+# ===================================
+# Runtime Data
+# ===================================
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# ===================================
+# Testing & Coverage
+# ===================================
 coverage/
 *.lcov
-
-# nyc test coverage
 .nyc_output
+test-results/
+junit.xml
+.jest-cache/
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
+# ===================================
+# Cache Directories
+# ===================================
 .npm
-
-# Optional eslint cache
 .eslintcache
-
-# Microbundle cache
+.cache
+.parcel-cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
+# ===================================
+# Optional Files
+# ===================================
 .node_repl_history
-
-# Output of 'npm pack'
 *.tgz
-
-# Yarn Integrity file
 .yarn-integrity
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
+# ===================================
+# Frontend Specific
+# ===================================
+# Next.js
+.next/
+out/
+.vercel
 
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
+# Nuxt.js
 .nuxt
+.output
 
-# Gatsby files
+# Gatsby
 .cache/
-public
+public/
 
-# Storybook build outputs
+# Storybook
 .out
 .storybook-out
+storybook-static/
 
-# Temporary folders
-tmp/
-temp/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# .NET
+# ===================================
+# Backend Specific (.NET)
+# ===================================
 bin/
 obj/
 *.user
 *.suo
 *.cache
-*.dll
-*.pdb
-*.exe
-!**/packages/build/
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
 
+# ===================================
+# Database
+# ===================================
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+
+# ===================================
 # Terraform
+# ===================================
 **/.terraform/*
 *.tfstate
 *.tfstate.*
+*.tfstate.backup
 crash.log
 crash.*.log
 *.tfvars
@@ -133,15 +188,96 @@ override.tf.json
 *_override.tf.json
 .terraformrc
 terraform.rc
+.terraform.lock.hcl
 
+# ===================================
 # Docker
+# ===================================
 .dockerignore
 
-# Deployment scripts
+# ===================================
+# Temporary & Misc
+# ===================================
+tmp/
+temp/
+*.tmp
+*.bak
+*.swp
+*.swo
+
+# ===================================
+# Deployment Scripts (One-time use)
+# ===================================
 deploy-*.sh
 fix-*.sh
 install-*.sh
 complete-*.sh
 final-*.sh
 setup-*.sh
+rebuild-*.sh
+seed-*.sql
+insert-*.sql
+create-*.sh
+
+# ===================================
+# Compressed Files
+# ===================================
 *.tar.gz
+*.zip
+*.rar
+*.7z
+
+# ===================================
+# Documentation (Internal/Temporary)
+# ===================================
+# Status and temporary documentation
+APLICACAO-FUNCIONANDO.md
+PROBLEMA-CSP-RESOLVIDO.md
+RESUMO-FINAL-COMPLETO.md
+STATUS-FINAL.txt
+CUSTO-FINAL-AWS.md
+*-RESOLVIDO.md
+*-COMPLETO.md
+*-FINAL*.md
+*-FINAL*.txt
+
+# Keep important documentation
+!README.md
+!CONTRIBUTING.md
+!CHANGELOG.md
+!LICENSE.md
+!docs/
+!docs/**/*.md
+
+# ===================================
+# Package Manager Files (Optional)
+# ===================================
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Keep root package-lock for reproducible builds
+!/package-lock.json
+!/frontend/package-lock.json
+!/microservice/package-lock.json
+
+# ===================================
+# CloudFront & CDN
+# ===================================
+.cloudfront
+
+# ===================================
+# Monitoring & Metrics
+# ===================================
+.newrelic/
+
+# ===================================
+# Miscellaneous
+# ===================================
+.phpunit.result.cache
+.php_cs.cache
+.sass-cache/
+*.css.map
+*.js.map
+*.min.js
+*.min.css
